--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
-version: '3.8'
-
 services:
-  sqlserver:
+  sql_server:
     image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: sqlserver_dev
+    container_name: sql_server
     environment:
+      SA_PASSWORD: "YourPassword123"
       ACCEPT_EULA: "Y"
-      SA_PASSWORD: "brigham_portfolio534"
     ports:
       - "1433:1433"
     volumes:
-      - sqlserver_data:/var/opt/mssql
-    restart: unless-stopped
+      - sqlserver_data:/var/opt/mssql # your existing DB volume
+      - /home/wbrigham/projects/sql-data-warehouse-project:/repo # <-- NEW MOUNT
 
 volumes:
   sqlserver_data:
